--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Module",
-            "type": "python",
-            "request": "launch",
-            "module": "__init__"
-        },
-        {
             "name": "Example: Server",
             "type": "python",
             "request": "launch",
-            "module": "examples.server"
+            "module": "examples.server2"
         }
     ]
 }
